--- a/Clients/client/src/app/_modules/contractors/contractor/contractor.component.html
+++ b/Clients/client/src/app/_modules/contractors/contractor/contractor.component.html
@@ -8,7 +8,7 @@
         </button>
     </div>
     <div class="col-12 col-md-6 mt-2 mt-md-0">
-        <button class="btn btn-outline-primary w-100" [routerLink]="['/contractors/add']">
+        <button class="btn btn-outline-primary w-100" (click)="addNew()">
             <div class="float-left p-2 pl-4">
                 <i class="fa fa-plus mr-4" aria-hidden="true"></i>
                 Add next
