--- a/Clients/client/src/app/_modules/contractors/contractors-list-item/contractors-list-item.component.html
+++ b/Clients/client/src/app/_modules/contractors/contractors-list-item/contractors-list-item.component.html
@@ -4,19 +4,18 @@
             <div class="smart-wrap name">
                 {{contractor.name}}
             </div>
-            <div>
-                <!-- {{contractor.saleNetPrice| currency:contractor.saleCurrency}} -->
-            </div>
         </div>
         <div class="d-flex justify-content-between">
             <div class="smart-wrap code">
                 {{contractor.code}}
             </div>
-            <!-- <div *ngIf="!contractor.stockLevelControl">
-                {{contractor.stockLevel| number:'1.4-4' }} {{contractor.unit}}
+        </div>
+        <div class="d-flex justify-content-between">
+            <div class="smart-wrap code h-auto">
+                VAT ID: {{contractor.vatId}}
+            </div>
                 <i *ngIf="mouseOver || selectMode" class="fa" aria-hidden="true"
                     [ngClass]="!selected ? 'fa-circle-thin' : 'fa-check-circle text-primary'" (click)="select($event)"></i>
-            </div> -->
         </div>
     </div>
 </div>
