--- a/Clients/client/src/app/_modules/account/reset-password/reset-password.component.html
+++ b/Clients/client/src/app/_modules/account/reset-password/reset-password.component.html
@@ -1,1 +1,25 @@
-<p>reset-password works!</p>
+  <div class="modal-body p-0">
+    <div class="col-12 p-0">
+        <div class="card">
+          <div class="card-header">
+            <div>
+                <div class="d-inline-block">
+                    <h3 class="m-0 font-weight-bold">Reset password</h3>
+                </div>
+                <button type="button" class="btn-close close float-right" aria-label="Close" (click)="bsModalRef.hide()">
+                    <span aria-hidden="true" class="visually-hidden">&times;</span>
+                </button>
+            </div>
+          </div>
+          <div class="card-body">
+            <form id="logInForm" [formGroup]="resetPasswordForm">
+              <div class="form-group form-row">
+                <app-text-input class="col-12" [formControl]='resetPasswordForm.controls["email"]' [label]='"Email"'></app-text-input>
+              </div>
+  
+              <button [disabled]="!resetPasswordForm.valid" type="button" class="btn btn-success float-right" form="Reset password" (click)="resetPassword()">Reset password</button>
+            </form>
+          </div>
+        </div>
+      </div>
+  </div>  
