--- a/Clients/client/src/app/_modules/account/log-in/log-in.component.html
+++ b/Clients/client/src/app/_modules/account/log-in/log-in.component.html
@@ -7,7 +7,7 @@
         <div class="card-body">
           <form id="logInForm" [formGroup]="logInForm">
             <div class="form-group form-row">
-              <app-text-input class="col-12" [formControl]='logInForm.controls["login"]' [label]='"Login"'></app-text-input>
+              <app-text-input class="col-12" [formControl]='logInForm.controls["login"]' [label]='"Email"'></app-text-input>
             </div>
             <div class="form-group form-row">
               <app-text-input class="col-12" [formControl]='logInForm.controls["password"]' 
