--- a/Clients/client/src/app/_modules/form-controls/select-search/select-search.component.css
+++ b/Clients/client/src/app/_modules/form-controls/select-search/select-search.component.css
@@ -1,11 +1,14 @@
-/* ::ng-deep .mat-form-field-infix{
-    border: 0;
+.disabled{
+    position: relative;
 }
-
-::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
-    height: 0!important;
+.disabled:after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: inherit;
+    background-color: rgba(0,0,0,0.1);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
-
-::ng-deep .mat-form-field-appearance-legacy .mat-form-field-wrapper{
-    padding: 0;
-} */
